# pico-projects

./: CMakeLists.txt  README.md
01_blink/: CMakeLists.txt
02_blink_print/: CMakeLists.txt
02_blinkprint/: CMakeLists.txt  blinkprint.c
03_blinkio/: CMakeLists.txt  blinkio.c
04-picopwm/: CMakeLists.txt  picopwm.c
04_pico_pwm/: CMakeLists.txt  pico_pwm.c
07_pico_machine/: CMakeLists.txt  main.c
demo_ssd1306/: CMakeLists.txt  demo_ssd1306.cpp  pico_ssd1306.ino
lib_lcd114/: CMakeLists.txt  GUI_Paint.h  font10x19fixedsys.c  font15x23lucida.c  font16x26consolas.c  fonts.h  lcd114.c  lcd114.h
lib_ssd1306/: CMakeLists.txt  ShapeRenderer.h  TextRenderer.h  readme.md  ssd1306.cpp  ssd1306.h
machine2/: CMakeLists.txt  draw.c  m2_adc.c  m2_drawing.c  m2_eeprom.c  m2_global.h  m2_globals.h  m2_main.c  m2_pwm.c  m2_sense.c  m2_util.c  m2drawing.c  m2main.c  m2pwm.c  m2util.c  machine.h  main.c  pwm.c
pico_adc/: CMakeLists.txt  machine.h  machine_led.c  machine_main.c  machine_pwm.c
pico_blink_io/: CMakeLists.txt
pico_blink_print/: CMakeLists.txt  blink_print.c
pico_encoder/: CMakeLists.txt  dac_mcp4921.cpp  dac_mcp4921.h  eeprom_24cxx.cpp  encoder.h  encoder_display.cpp  encoder_main.cpp  encoder_util.cpp  quadrature.pio.h
pico_flash_nuke/: flash_nuke.txt
pico_i2c_scan/: CMakeLists.txt  pico_i2c_scan.c
pico_lcd/: CMakeLists.txt  pico_lcd.c
pico_load/: CMakeLists.txt  adc_ad7887.cpp  adc_ad7887.h  board_config.h  dac_mcp4921.cpp  dac_mcp4921.h  eeprom_24cxx.h  encoder.cpp  encoder.h  load.h  load_display.cpp  load_main.cpp  load_util.cpp
pico_machine/: CMakeLists.txt  command.c  machine.c  machine.h  machine_adc.c  machine_direct.c  machine_led.c  machine_main.c  machine_pwm.c
pico_pio/: CMakeLists.txt  limiter.pio  repeater.pio
pico_pwm/: CMakeLists.txt  pico_pwm.c
pico_rectifier/: CMakeLists.txt  board_config.h  easy_buttons.c  easy_buttons.h  easy_eeprom.c  limited_repeater.pio  pico_rectifier.cpp
pico_smps/: CMakeLists.txt  easy_buttons.h  easy_eeprom.h  easy_pwm.c  easy_pwm.h  smps.h  smps_config.cpp  smps_core1.cpp  smps_display.cpp  smps_globals.h  smps_main.cpp  smps_memory.cpp  smps_pio.cpp  smps_repeater.pio  smps_util.cpp
pico_ssd1306/: CMakeLists.txt
